# DAFE_CPP_013

./: .gitmodules  main.cpp  myvector.h
Bochkarev_Bogdan/: CMakeLists.txt  Newton_method.cpp  Newton_method.hpp  Script.py  Wrap.cpp  bisection_method.cpp  bisection_method.hpp  calculator.cpp  calculator.h  correctness_checker.cpp  correctness_checker.hpp  declare.hpp  function.cpp  function.hpp  grammar.cpp  grammar.hpp  logic.cpp  logic.hpp  main.cpp  secant_method.cpp  secant_method.hpp  solver.cpp  token.cpp  token.hpp
Bochkarev_Bogdan/Calculator/: Wrap.hpp  declare.hpp  function.hpp  grammar.hpp  main.cpp  scientific_options.cpp  scientific_options.hpp  secant_method.cpp  solver.h
Bochkarev_Bogdan/Calculator/Tests/calc/: Input.txt
Bochkarev_Bogdan/Calculator/Tests/solv/: Input 1.txt  Input 10.txt  Input 11.txt  Input 12.txt  Input 3.txt  Input 5.txt  Input 7.txt  Input 8.txt
Bochkarev_Bogdan/Tests/calc/: Input.txt
Bochkarev_Bogdan/Tests/solv/: Input 2.txt  Input 4.txt  Input 9.txt
Bochkarev_Bogdan/vector_local-master-2/: allocations.cpp  allocations.hpp  logic.cpp  logic.hpp  main.cpp
Iacmenkov_Alex/: CMakeLists.txt  FUNCTION.cpp  FUNCTION.h  TOKEN.h  TOKEN_STREAM.cpp  TOKEN_STREAM.h  Text.txt  Variable.cpp  Variable.h  main.cpp
Lebed_Vladislav/: .gitignore
Pyotr_Potapenko/calculator08buggy/: CMakeLists.txt  calculate.cpp  calculate.h  calculateProcess.h  calculator08buggy.cpp  config.cpp  config.h  iomode.cpp  iomode.h  iomodeutils.h  keys.h  printHelp.cpp  printHelp.h  tests.txt  token.h  tokenStream.cpp  tokenStream.h  variables.cpp  variables.h
(+257 files in other folders)
